ADD_SUBDIRECTORY(singlecpu)
ADD_SUBDIRECTORY(cpu)

SET_TARGET_PROPERTIES(ReaDDy_kernel_singlecpu
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
    LIBRARY_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
)

SET_TARGET_PROPERTIES(ReaDDy_kernel_cpu
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
    LIBRARY_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
)