PROJECT(ReaDDy_kernel_cpu CXX)

# sources and headers
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/kernels/cpu.cmake")

# create library
ADD_LIBRARY(${PROJECT_NAME} SHARED ${CPU_SOURCES} ${ReaDDy_INCLUDE_DIRS} ${CPU_INCLUDE_DIR})

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${Boost.DLL_INCLUDE_DIRS} ${CPU_INCLUDE_DIR})

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS} ReaDDy)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        POSITION_INDEPENDENT_CODE ON
        LINK_FLAGS "${EXTRA_LINK_FLAGS}"
        COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
        ARCHIVE_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
        LIBRARY_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
        )

INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib/readdy_plugins)

IF (READDY_CREATE_TEST_TARGET)
    ADD_SUBDIRECTORY(test)
ENDIF()