PROJECT(ReaDDy_kernel_singlecpu CXX)

# sources and headers
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/kernels/singlecpu.cmake")

# create library
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SINGLECPU_SOURCES} ${ReaDDy_INCLUDE_DIRS} ${SINGLECPU_INCLUDE_DIR})

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${SINGLECPU_INCLUDE_DIR} ${Boost.DLL_INCLUDE_DIRS})

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS} ReaDDy)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
    ARCHIVE_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
    LIBRARY_OUTPUT_DIRECTORY "${READDY_PLUGIN_OUTPUT_DIRECTORY}"
)

INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib/readdy_plugins)

IF (READDY_CREATE_TEST_TARGET)
    ADD_SUBDIRECTORY(test)
ENDIF()