PROJECT(ReaDDy_kernel_singlecpu CXX)

# sources and headers
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/kernels/singlecpu.cmake")

# create library
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SINGLECPU_SOURCES} ${ReaDDy_INCLUDE_DIRS})

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${Boost.DLL_INCLUDE_DIRS})

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS} ${READDY_SINGLECPU_DEPENDENT_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy_common ReaDDy_model ReaDDy_io)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
)

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)